--- a/assets/Style/style.css
+++ b/assets/Style/style.css
@@ -45,7 +45,7 @@ a {
     font-size: 40px;
 }
 
-.topo i {
+.bi-arrow-through-heart-fill {
     font-size: 60px;
 }
 
@@ -59,7 +59,6 @@ a {
 
 .formParaSignIn input {
     padding: 15px;
-    margin: 20px 0;
     margin-bottom: 10px;
     border-radius: 20px;
     border: 1px solid #ff768de1;
@@ -72,10 +71,10 @@ a {
     background: none;
 }
 
-.password i {
-    margin-left: -40px;
+.bi-eyeglasses {
+    margin-left: -35px;
     border-left: 1px solid #ff768d75;
-    font-size: 23px;
+    font-size: 25px;
     padding: 5px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -83,7 +82,7 @@ a {
     color: #fd5470;
 }
 
-.password i:hover {
+.password i:hover{
     cursor: pointer;
     background-color: #ff768d69;
 }
@@ -112,14 +111,12 @@ a {
     background-color: #fa7188;
 }
 
-
 @media screen and (max-width:800px) {
-
     .topo h1 {
-        font-size: 25px;
+        font-size: 30px;
     }
 
     .topo i {
-        font-size: 40px;
+        font-size: 45px;
     }
 }
