--- a/assets/Style/style.css
+++ b/assets/Style/style.css
@@ -1,8 +1,8 @@
 * {
+    outline-color: #fa7188;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: none;
     border: none
 }
 
